@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Improve messages (lib/messages): add relative chance, so messages can be
+more frequent than others.
+Nicolas Weeger 2011-05-07
+
+
 Remove hard coded stat values - the stat bonuses (as well as max stat) can
 be set in a file that is read at load time.  The default lib/stat_bonus
 file has bonuses exactly the same as the old hard coded values (or in
